--- a/_posts/2018-03-19-appclone.md
+++ b/_posts/2018-03-19-appclone.md
@@ -170,7 +170,7 @@ tags:
 
 2. 对于不需要使用 file 协议的应用，禁用 file 协议，明确禁止
 
-   ```
+   ```java
    setAllowFileAccess(false); 
    setAllowFileAccessFromFileURLs（）
    setAllowUniversalAccessFromFileURLs（）
